# sqlmesh-example

./: db.db  pyproject.toml
.cache/model_definition/: models__full_model__0__59__20__1__33__1702505749__365834003  models__incremental_model__0__59__20__1__33__1702504574__365834003
.cache/optimized_query/: sqlmesh_example_full_model__0__59__20__1__33__1545246100  sqlmesh_example_full_model__0__59__20__1__33__562084946  sqlmesh_example_incremental_model__0__59__20__1__33__3634360247
models/: full_model.sql
seeds/: seed_data.csv
