[tool.poetry]
name = "sqlmesh-example"
version = "0.1.0"
description = "sqlmesh"
authors = ["Connor <flocka_birdz@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
dlt = "^0.3.12"
duckdb = "^0.8.0"
sqlmesh = {extras = ["web"], version = "^0.59.0"}
pandas = "2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"